# shodan-dojo

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
katas/certificate/: answer.md  index.md
katas/compromised/: answer.md  index.md
katas/fakespy/: index.md
katas/favicon_hash/: answer.md  index.md
katas/fuelphp_profiler/: index.md
katas/ghostdns/: index.md
katas/html_hash/: answer.md  index.md
katas/ssh_fingerprint/: answer.md  index.md
scripts/: favicon.py  html.py  ssh_pubkey.py  ssl_serial.py
