[tool.poetry]
name = "shodan-dojo"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
mmh3 = "^2.5.1"
cryptography = "^2.9.2"
sshpubkeys = "^3.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
black = "^19.10b0"
autoflake = "^1.3.1"
isort = "^4.3.21"
mypy = "^0.770"
flake8 = "^3.8.2"
pre-commit = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
